--- a/manifests/vishnu-manifests/cvat_opa_deployment.yml
+++ b/manifests/vishnu-manifests/cvat_opa_deployment.yml
@@ -24,4 +24,6 @@ spec:
         - containerPort: 8181
         volumeMounts:
         - mountPath: /rules
-          name: opa        
+          name: opa   
+      - name: log
+        emptyDir: {}          
