--- a/manifests/vishnu-manifests/02_cvat_backend_storage.yml
+++ b/manifests/vishnu-manifests/02_cvat_backend_storage.yml
@@ -6,7 +6,18 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: standard
+  storageClassName: gp2
   resources:
     requests:
       storage: 20Gi
+...
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
+metadata:
+  name: gp2
+  annotations:
+    storageclass.kubernetes.io/is-default-class: "true"
+provisioner: kubernetes.io/aws-ebs
+parameters:
+  type: gp2
+  fsType: ext4
