--- a/manifests/vishnu-manifests/02_cvat_backend_storage.yml
+++ b/manifests/vishnu-manifests/02_cvat_backend_storage.yml
@@ -12,14 +12,16 @@ spec:
       storage: 20Gi
       
 ...
-kind: StorageClass
 apiVersion: storage.k8s.io/v1
+kind: StorageClass
 metadata:
   name: standard
-  annotations:
-    storageclass.kubernetes.io/is-default-class: "true"
 provisioner: kubernetes.io/aws-ebs
 parameters:
-  type: gp2
-  fsType: ext4
+  type: gp3
+reclaimPolicy: Retain
+allowVolumeExpansion: true
+mountOptions:
+  - debug
+volumeBindingMode: Immediate
 
