--- a/manifests/vishnu-manifests/cvat_opa_deployment.yml
+++ b/manifests/vishnu-manifests/cvat_opa_deployment.yml
@@ -21,4 +21,5 @@ spec:
       - name: cvat-opa
         image: vishnu00245/opa
         ports:
-        - containerPort: 8181         
+        - containerPort: 8181 
+        command: ["/bin/sh", "-ec", "while :; do echo '.'; sleep 5 ; done"]
