--- a/manifests/vishnu-manifests/cvat_opa_deployment.yml
+++ b/manifests/vishnu-manifests/cvat_opa_deployment.yml
@@ -22,4 +22,4 @@ spec:
         image: vishnu00245/opa
         ports:
         - containerPort: 8181 
-        command: ["/bin/sh", "-ec", "while :; do echo '.'; sleep 5 ; done"]
+        command: ["/bin/sh", "-c", "#(nop)","CMD[\"run\"]"]
